HelloUltraviolet/Fixtures/RejectedSource/Statements/LocalUsingStatementsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the LocalUsingStatementsDiagnostic rejected-source specimen.

expectedDiagnostic("E-MOD-1301", "diag.18.LocalUsingStatements")
